ID and Z-index fixes

--- a/src/components/react/molecules/Navbar.css
+++ b/src/components/react/molecules/Navbar.css
@@ -22,7 +22,7 @@
 	top: .6rem;
 	left: 1.1rem;
 	cursor: pointer;
-	z-index: 2;
+	z-index: 3;
 }
 
 #menu-icon-container {
@@ -93,7 +93,7 @@ nav {
 	left: calc(var(--nav-width) * -1);
 	margin: 0;
 	padding: 4.2rem 0 .6rem;
-	z-index: 1;
+	z-index: 2;
 	transition: left .5s;
 }
 
